updated image covers

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     </div>
 
     <div class="container">
-      <div id="book-container" class="row row-cols-1 row-cols-md-4">
+      <div id="book-container" class="row row-cols-1 row-cols-md-4 p-20f">
         <div class="col card-template" style="display: none;">
           <div class="book card h-100 p-3 border border-2">
-            <img class="book-cover" src="" alt="Cover Image" />
+            <img class="book-cover" src="" alt="Cover Image" style="height: 400px;"/>
             <h2><a href="#" class="book-title">Title </a></h2>
             <p class="card-text book-author">by Author</p>
           </div>
