--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Book Catalog</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
+
 <body class="bg-light">
   <header class="bg-primary text-white p-4 mb-4">
     <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
@@ -32,11 +34,12 @@
     </div>
 
     <div class="container">
-      <div id="book-container" class="row row-cols-1 row-cols-md-4 p-20f">
-        <div class="col card-template" style="display: none;">
+      <div id="book-container" class="book-row row row-cols-1 row-cols-md-4">
+        <div class="col card-template" style="display: none; padding-bottom: 20px;">
           <div class="book card h-100 p-3 border border-2">
-            <img class="book-cover" src="" alt="Cover Image" style="height: 400px;"/>
-            <h2><a href="#" class="book-title">Title </a></h2>
+            <img class="book-cover img-fluid" src="" alt="Cover Image" style="height: 70%;"/>
+            <hr/>
+            <h3 class="book-title"> Title </h3>
             <p class="card-text book-author">by Author</p>
           </div>
         </div>
