--- a/index.html
+++ b/index.html
@@ -34,27 +34,16 @@
     </div>
 
     <div class="container">
-      <div id="book-container" class="book-row row row-cols-1 row-cols-md-4">
+      <div id="book-container" class="book-row row row-cols-1 row-cols-md-5">
         <div class="col card-template" style="display: none; padding-bottom: 20px;">
           <div class="book card h-100 p-3 border border-2">
             <img class="book-cover img-fluid" src="" alt="Cover Image" style="height: 70%;"/>
             <hr/>
             <h3 class="book-title"> Title </h3>
             <p class="card-text book-author">by Author</p>
-            <div class="accordion" id="learn-more-accordian">
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Learn More
-                  </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                  </div>
-                </div>
-              </div>
-            </div>
+            <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#learn-more-modal">
+              Learn More
+            </button>
           </div>
         </div>
       </div>
@@ -66,6 +55,29 @@
     <p class="mb-0">&copy; 2023 Book Catalog Inc.</p>
   </footer>
 
+  <div class="modal fade" id="learn-more-modal" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="modalTitle">Title</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p class="book-description">short description</p> 
+          <p class="book-author">by Author</p>
+          <p class="book-genre">Genre</p>
+          <p class="book-date">Published:</p>
+          <p class="book-pages"># Pages</p>
+          <div class="d-flex justify-content-center w-100">
+            <a href="#" class="btn btn-primary" id="good-reads-link" target="_blank">View on Goodreads</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
+
 </html>
