added sorting options

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
         <button class="btn btn-outline-primary" id="clearButton">Clear</button>
     </div>
     <div class="d-flex justify-content-center flex-wrap gap-3 my-4">
-        <button class="btn btn-warning" id="highlightButton">Highlight long titles</button>
-        <button class="btn btn-secondary" id="resetButton">Reset Borders</button>
+        <button class="btn btn-warning" id="titleSort">Sort by title</button>
+        <button class="btn btn-warning" id="authorSort">Sort by author</button>
+        <button class="btn btn-warning" id="pubSort">Sort by publication date</button>
+        <button class="btn btn-warning" id="lengthSort">Sort by length</button>
     </div>
 
     <div class="container">
