adjusted image height

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div id="book-container" class="book-row row row-cols-1 row-cols-md-5">
         <div class="col card-template" style="display: none; padding-bottom: 20px;">
           <div class="book card h-100 p-3 border border-2">
-            <img class="book-cover img-fluid" src="" alt="Cover Image" style="height: 70%;"/>
+            <img class="book-cover img-fluid" src="" alt="Cover Image" style="height: 300px;"/>
             <hr/>
             <h3 class="book-title"> Title </h3>
             <p class="card-text book-author">by Author</p>
