--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <button class="btn btn-warning" id="authorSort">Sort by author</button>
         <button class="btn btn-warning" id="pubSort">Sort by publication date</button>
         <button class="btn btn-warning" id="lengthSort">Sort by length</button>
-        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#categories-modal">Categories</button>
+        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#categories-modal">Genres</button>
     </div>
 
     <div class="container">
@@ -87,20 +87,20 @@
         </div>
         <div class="modal-body">
           <ul class="list-unstyled">
+            <li>Adventure</li>
             <li>Classic Fiction</li>
             <li>Coming-of-Age</li>
             <li>Dystopian</li>
-            <li>Romance</li>
-            <li>Adventure</li>
+            <li>Epic Poetry</li>
             <li>Fantasy</li>
             <li>Gothic Fiction</li>
-            <li>Philosophical Fiction</li>
-            <li>Psychological Fiction</li>
             <li>Historical Fiction</li>
-            <li>Science Fiction</li>
             <li>Horror</li>
             <li>Mythology</li>
-            <li>Epic Poetry</li>
+            <li>Philosophical Fiction</li>
+            <li>Psychological Fiction</li>
+            <li>Romance</li>
+            <li>Science Fiction</li>
           </ul>
         </div>
       </div>
