added content to about

--- a/about.html
+++ b/about.html
@@ -23,7 +23,9 @@
   
   <main class="container">
     <h1> About </h1>
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p> 
+      This website is built to help users find books by title, author, genere, length, etc.. This website is built, improving upon a base website, with the intent of impriving its usability. This website was created for the design spring 4 for the Human Computer Interaction class at Williams College.
+    </p>
 
   </main>
 
