updated sorting features

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <hr/>
             <h3 class="book-title"> Title </h3>
             <p class="card-text book-author">by Author</p>
+            <p class="card-text book-additional">Additional</p>
             <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#learn-more-modal">
               Learn More
             </button>
