updated about page

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
   <main class="container">
     <h1> About </h1>
     <p> 
-      This website is built to help users find books by title, author, genere, length, etc.. This website is built, improving upon a base website, with the intent of impriving its usability. This website was created for the design spring 4 for the Human Computer Interaction class at Williams College.
+      This website is built to help users find books by title, author, genre, length, etc. This website is built upon a base website that can be found here: https://github.com/lsouth-williams/CSCI376-DS4, with the intent of improving its usability. This website was created for the design spring 4 for the Human Computer Interaction class at Williams College.
     </p>
 
   </main>
