changed an aria label

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
     <p class="mb-0"> Contact: chl2@williams.edu | ry5@williams.edu | mv9@williams.edu | lyy1@williams.edu </p>
   </footer>
 
-  <div class="modal fade" id="learn-more-modal" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
+  <div class="modal fade" id="learn-more-modal" tabindex="-1" aria-labelledby="modaltitle" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="modalTitle">Title</h1>
+          <h1 class="modal-title fs-5" id="modaltitle">Title</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -78,11 +78,11 @@
     </div>
   </div>
 
-  <div class="modal fade" id="categories-modal" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
+  <div class="modal fade" id="categories-modal" tabindex="-1" aria-labelledby="modaltitle" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="modalTitle">Select Genre</h1>
+          <h1 class="modal-title fs-5" id="modaltitle">Select Genre</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
