--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
   <main class="container">
     <div class="input-group mb-4">
-        <input type="text" id="searchInput" class="form-control" placeholder="Search for a book title, author, or genre...">
+        <input type="text" id="searchInput" class="form-control" placeholder="Search for a book title, author, or genre..."></input>
         <button class="btn btn-outline-primary" id="clearButton">Clear</button>
     </div>
     <div class="d-flex justify-content-center flex-wrap gap-3 my-4">
